<resources>
    <string name="app_name">Letters</string>
    <string name="app_name_toolbar" translatable="false">Letters</string>

    <!--Login-->
    <string name="description_main">The easiest way to send letters to your loved one, even if your\'e not Shakespeare</string>
    <string name="description_app_create_or_choose_letters">Compose letters that make your loved one smile, or pick one from our beautiful collection</string>
    <string name="description_you_get_reminders">We will remind you once a week to send a letter so you won\'t miss a chance to strengthen your relationship</string>

    <!-- Messages Preferences -->
    <string name="pref_key_device_registered_to_push_notifications" translatable="false">pref_key_device_registered_to_push_notifications</string>
    <string name="pref_key_user_registered_in_server" translatable="false">pref_key_user_registered_in_server</string>
    <string name="pref_key_random_identifier" translatable="false">pref_key_random_identifier</string>
    <string name="pref_key_user_name" translatable="false">pref_key_user_name</string>
    <string name="pref_key_lover_nickname" translatable="false">pref_key_lover_nickname</string>
    <string name="pref_key_lover_phone_region_number" translatable="false">pref_key_lover_phone_region_number</string>
    <string name="pref_key_show_only_letters_created_by_user" translatable="false">pref_key_show_only_letters_created_by_user</string>
    <string name="pref_title_show_only_letters_created_by_user">Display only letters created by you</string>
    <string name="pref_key_user_full_target_phone_number" translatable="false">pref_key_user_full_target_phone_number</string>
    <string name="pref_key_user_local_phone_number" translatable="false">pref_key_user_local_phone_number</string>
    <string name="pref_key_user_phone_region_number" translatable="false">pref_key_user_phone_region_number</string>
    <string name="pref_key_lover_full_target_phone_number" translatable="false">pref_key_lover_full_target_phone_number</string>
    <string name="pref_key_lover_local_phone_number" translatable="false">pref_key_lover_local_phone_number</string>
    <string name="pref_key_trigger_time_send_letter_reminder" translatable="false">pref_key_trigger_time_send_letter_reminder</string>
    <string name="pref_key_is_feature_active_send_letter_reminder" translatable="false">pref_key_is_feature_active_send_letter_reminder</string>
    <string name="pref_title_target_phone_number">Phone number</string>
    <string name="pref_dialog_title_target_phone_number">Lover\'s number</string>
    <string name="pref_key_local_letters_database_populated_after_app_installed" translatable="false">pref_key_local_letters_database_populated_after_app_installed</string>
    <string name="pref_key_server_letters_downloaded_after_app_installed" translatable="false">pref_key_server_letters_downloaded_after_app_installed</string>
    <string name="pref_key_current_letter_id" translatable="false">pref_key_current_letter_id</string>

    <!--Data transmission keys-->
    <string name="current_letter_id" translatable="false">current_letter_id</string>

    <!--Regular titles for user-->
    <string name="title_settings">Settings</string>
    <string name="title_letters_list">Letters List</string>
    <string name="title_what_is_your_name">Your first name</string>
    <string name="title_what_is_your_lover_nickname">Lover\'s nickname</string>
    <string name="title_what_is_your_lovers_phone_number">Lover\'s number</string>
    <string name="title_letter_list_is_empty">No letters to display</string>
    <string name="title_empty_letter_deleted">Empty letter deleted</string>
    <string name="title_letter_deleted">Letter deleted</string>
    <string name="title_undo">Undo</string>
    <string name="title_share">Share</string>
    <string name="title_delete">Delete</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_choose_from_contacts">Choose from contacts</string>
    <string name="title_are_you_sure">Are you sure?</string>
    <string name="title_letter_will_be_deleted_forever">The letter will be deleted forever</string>
    <string name="title_letters_will_be_deleted_forever">The letters will be deleted forever</string>
    <string name="hint_your_words_here">Your words here</string>
    <string name="error_msg_whatsapp_not_installed">Whatsapp is not install on your phone. Please install the app and try again</string>
    <string name="title_next">Next</string>
    <string name="title_done">Done</string>
    <string name="title_write">Write</string>
    <string name="title_remember">Remember</string>

    <!--Notification titles-->
    <string name="notification_title_send_letter_reminder">A love reminder 💌</string>
    <string name="notification_message_send_letter_reminder">Time to remind your loved one of your appreciation</string>

    <!--Errors-->
    <string name="error_no_user_name_inserted">Please insert your first name</string>
    <string name="error_no_lover_nickname_inserted">Please insert loved one\'s cute nickname</string>
    <string name="error_invalid_lover_number_inserted">Please insert a valid international phone number</string>
    <string name="error_parsing_contact_number">There was an error while choosing from contacts, please try again</string>
    <string name="error_no_external_app_found_for_sharing_content">Could not find any application that is able to share this</string>
    <string name="error_no_network_connection">Operation failed, Please make sure you have a network connection and try again</string>
    <string name="error_login_default_network_failure">A problem occurred while registering. Please try again in a minute</string>


    <!--Content Descriptions-->
    <string name="content_desc_new_letter" translatable="false">New Letter</string>
    <string name="content_desc_share_with_whatsapp" translatable="false">Share with whatsapp</string>
    <string name="content_desc_more_options" translatable="false">More options</string>
    <string name="content_desc_create_letter" translatable="false">Create letter screen</string>
    <string name="content_desc_all_letters" translatable="false">All letters screen</string>
    <string name="content_desc_back" translatable="false">Back</string>
    <string name="content_desc_app_name" translatable="false">Love Notes</string>

    <!--Ads-->
    <string name="app_ads_id" translatable="false">ca-app-pub-9760042484356207~5572026732</string>
    <string name="app_ads_test_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ads_test_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="device_test_ads_id" translatable="false">"3B037641D94AB165A5765E19F00076B5"</string>

    <!--Backendless tables-->
    <string name="backendless_table_name_letters_english" translatable="false">LoveLettersEnglish</string>
    <string name="backendless_table_name_letters_hebrew" translatable="false">LoveLettersHebrew</string>

    <!--Misc-->
    <string name="default_country_code" translatable="false">IL</string> <!--Israel-->
    <string name="israel_country_code" translatable="false">IL</string>
    <string name="label_activity_settings" translatable="false">SettingsActivity</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="user_name_as_closure_fallback">Me</string>
    <string name="user_name_fallback">You</string>
    <string name="lover_nickname_fallback">My love</string>

</resources>