<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_registration">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loverNicknameBackButtonContainingCL"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/loverNicknameBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back_white_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/loverNicknameBackgroundDecorations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.15"
        android:src="@drawable/registration_background_decorations"
        app:layout_constraintBottom_toBottomOf="@+id/loverNicknameUpperImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loverNicknameUpperImageView" />

    <ImageView
        android:id="@+id/loverNicknameBackgroundDecorationsDotsAndStars"
        android:layout_width="363dp"
        android:layout_height="277dp"
        android:src="@drawable/registration_background_decorating_dots_and_stars"
        app:layout_constraintBottom_toBottomOf="@+id/loverNicknameUpperImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/loverNicknameUpperImageView"
        android:layout_width="@dimen/width_registration_upper_image"
        android:layout_height="@dimen/height_registration_upper_image"
        android:layout_marginTop="@dimen/margin_top_registration_upper_image"
        android:src="@drawable/registration_man_writing_letter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loverDetailsTitleIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_write"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loverNicknameUpperImageView" />

    <TextView
        android:id="@+id/loverNicknameAppDescriptionTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/letters_font_medium"
        android:gravity="center"
        android:text="@string/description_app_create_or_choose_letters"
        android:textColor="@color/white"
        android:textSize="@dimen/size_app_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loverDetailsTitleIv" />

    <TextView
        android:id="@+id/enterLoverNicknameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_instructor_text_enter_details"
        android:layout_marginTop="@dimen/margin_top_instructor_text_enter_details"
        android:fontFamily="@font/letters_font_regular"
        android:gravity="start"
        android:text="@string/title_what_is_your_lover_nickname"
        android:textColor="@color/white"
        android:textSize="@dimen/size_instructor_text_enter_details"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loverNicknameInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/loverNicknameAppDescriptionTV" />

    <EditText
        android:id="@+id/loverNicknameInputEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_registration_edit_text"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/background_white_shadowed_slightly_rounded"
        android:gravity="start|center_vertical"
        android:textColor="@color/detailsInputColor"
        android:paddingStart="@dimen/padding_edit_text_default"
        android:paddingEnd="@dimen/padding_edit_text_default"
        android:fontFamily="@font/letters_font_medium"
        android:inputType="text"
        android:textSize="@dimen/size_input_text_enter_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterLoverNicknameTV" />

    <Button
        android:id="@+id/loverNicknameContinueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="@font/letters_font_medium"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/title_next"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/size_registration_button_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loverNicknameInputEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>