<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_registration"
    tools:context=".registration.ui.EnterUserDetailsFragment">

    <ImageView
        android:id="@+id/userNameBackgroundDecorations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.15"
        android:src="@drawable/registration_background_decorations"
        app:layout_constraintBottom_toBottomOf="@+id/userNameUpperImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userNameUpperImageView" />

    <ImageView
        android:id="@+id/userNameBackgroundDecorationsDotsAndStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/registration_background_decorating_dots_and_stars"
        app:layout_constraintBottom_toBottomOf="@+id/userNameUpperImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/userNameUpperImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="111dp"
        android:src="@drawable/registration_lovers_and_letter_in_envelope"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userNameContinueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="@font/letters_font_medium"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/title_next"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/registration_button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userNameInputEditText"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/background_white_shadowed_slightly_rounded"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/edit_text_default_padding"
        android:paddingEnd="@dimen/edit_text_default_padding"
        android:fontFamily="@font/letters_font_medium"
        android:inputType="text"
        android:textSize="@dimen/size_input_text_enter_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterUserNameTV" />

    <ImageView
        android:id="@+id/userDetailsTitleIv"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="58dp"
        android:gravity="center"
        android:src="@drawable/lover_letter_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameUpperImageView" />

    <TextView
        android:id="@+id/userNameAppDescriptionTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/letters_font_medium"
        android:gravity="center"
        android:text="@string/description_main"
        android:textColor="@color/white"
        android:textSize="@dimen/app_description_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDetailsTitleIv" />

    <TextView
        android:id="@+id/enterUserNameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/letters_font_regular"
        android:gravity="start"
        android:text="@string/title_what_is_your_name"
        android:textColor="@color/white"
        android:textSize="@dimen/size_instructor_text_enter_details"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userNameInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/userNameAppDescriptionTV" />


</androidx.constraintlayout.widget.ConstraintLayout>