<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_registration"
    tools:context=".registration.ui.EnterUserNameFragment">

    <Button
        android:id="@+id/userNameContinueBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:fontFamily="@font/letters_font_medium"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/title_next"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/size_registration_button_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/userNameInputEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_registration_edit_text"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_white_shadowed_slightly_rounded"
        android:fontFamily="@font/letters_font_medium"
        android:gravity="start|center_vertical"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/padding_edit_text_default"
        android:paddingEnd="@dimen/padding_edit_text_default"
        android:textColor="@color/detailsInputColor"
        android:textSize="@dimen/size_input_text_enter_details"
        app:layout_constraintBottom_toTopOf="@+id/userNameContinueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/userNameUpperIV"
        android:layout_width="@dimen/registration_upper_image_small"
        android:layout_height="@dimen/registration_upper_image_small"
        android:layout_marginTop="8dp"
        android:src="@drawable/registration_lovers_and_letter_in_envelope"
        app:layout_constraintBottom_toTopOf="@+id/userNameTitleCL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/enterUserNameTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/letters_font_regular"
        android:gravity="start"
        android:text="@string/title_what_is_your_name"
        android:textColor="@color/white"
        android:textSize="@dimen/size_instructor_text_enter_details"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userNameInputEditText"
        app:layout_constraintEnd_toEndOf="@+id/userNameInputEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userNameInputEditText" />

    <View
        android:id="@+id/lowerPositioningView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/userNameContinueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userNameBackgroundDecorationsCL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userNameUpperIV">

        <ImageView
            android:id="@+id/userNameBackgroundDecorations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.15"
            android:src="@drawable/registration_background_decorations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userNameBackgroundDecorationsDotsAndStars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/registration_background_decorating_dots_and_stars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userNameTitleCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/userNameAppDescriptionTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/userNameTitleIV"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/letters_title_mom_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userNameTitleShadowIV"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/letters_title_mom_small"
            app:layout_constraintBottom_toBottomOf="@+id/userNameTitleIV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userNameTitleIV" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/userNameAppDescriptionTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/letters_font_medium"
        android:gravity="center"
        android:text="@string/description_main"
        android:textColor="@color/white"
        android:textSize="@dimen/size_app_description_text_small"
        app:layout_constraintBottom_toTopOf="@+id/enterUserNameTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>